TAG: qcreports_db-6-0-25-18
TAG: qcreports_db-6-0-25-17
TAG: qcreports_db-6-0-25-16
TAG: qcreports_db-6-0-25-15
DATE: 05/07/2025
STAFF: lec
wts2-1654/e4g-246/Karen Christie
wts2-1658/e4g-249/Meiyee Law
        modified:   qcr.shtml
update mgi_user set _userstatus_key = 316351 where _user_key in (1525,1530);

TAG: qcreports_db-6-0-25-14
DATE: 04/22/2025
STAFF: pf
	modified:    mgd/GXD_SameStructure.py

TAG: qcreports_db-6-0-25-13
DATE: 03/30/2025
STAFF: lec
wts2-1628/e4g-189/remove various recombinase QC reports

TAG: qcreports_db-6-0-25-12
TAG: qcreports_db-6-0-25-11
DATE: 03/20/2025
STAFF: lec
wts2-1832/e4g-199/modify GXD HT Experiment Partially Reviewed Papers to include Experiment Type = Not Resolved
        modified:   pwi/GXD_HTExperimentPMID.py
        modified:   pwi/pwireports.txt

TAG: qcreports_db-6-0-25-10
TAG: qcreports_db-6-0-25-9
TAG: qcreports_db-6-0-25-8
DATE: 03/18/2025
STAFF: lec
wts2-1628/e4g-189/remove various recombinase QC reports
wts2-1627/e4g-190/modify Alleles report 22-Review for AP:NewAlleleNomenclature tag
wts2-1626/e4g-191/New QC: Papers in public MGI for genes with no MP annotations
        deleted:    mgd/RECOMB_ChildExpNotParent.py
        deleted:    mgd/RECOMB_ExpPresNotPres.py
        deleted:    mgd/RECOMB_GenotypeHemi.sql
        deleted:    mgd/RECOMB_NotInCache.sql
        deleted:    mgd/RECOMB_SameStructure.py
        deleted:    mgd/RECOMB_SpecNoAge.sql
        deleted:    mgd/RECOMB_SpecTheiler.sql
        deleted:    mgd/RECOMB_SpecTheilerAge.py
        deleted:    monthly/RECOMB_Reporter.sql
        deleted:    monthly/RECOMB_ReporterCheck.py
	new file:   mgd/ALL_PM2GeneNoMP2.py
	modified:   qcgxd_reports.csh
        modified:   qcr.shtml
        modified:   weekly/GXD_Images.py
        modified:   weekly/GXD_LackingImages.py

TAG: qcreports_db-6-0-25-7
DATE: 03/14/2025
STAFF: lec
wts2-1624/e4g-186/add (last) Modified By to some GXD QCs
        modified:   mgd/GXD_ChildExpNotParent.py