@@ -1,3 +1,10 @@
+TAG: qcreports_db-6-0-25-??
+DATE: 05/07/2025
+STAFF: lec
+wts2-1655/e4g-252/Enhance QC report MRK_GmNoGeneModel.sql.rpt
+        new file:   MRK_GmNoGeneModel.py
+	deleted:    MRK_GmNoGeneModel.sql
+
 TAG: qcreports_db-6-0-25-18
 TAG: qcreports_db-6-0-25-17
 TAG: qcreports_db-6-0-25-16
